--- a/views/listings/filter.ejs
+++ b/views/listings/filter.ejs
@@ -1,6 +1,15 @@
 <% layout('./layouts/boilerplate') -%>
 
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-xm-1 ps-5 pe-5 mt-5">
+<div class="container text-end mt-3">
+    <form action="/listings" method="get">
+       <button class="btn btn-secondary pe-4 ps-4">
+           <i class="fa-solid fa-arrow-left"></i>
+       </button>
+   </form>    
+</div>
+
+
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-xm-1 ps-5 pe-5 mt-4">
     <% for(let listing of filterListings) {%>
         <div class="listing-card col-3">
             <a href="/listings/<%= listing._id %>" class="indexCard">
